; ModuleID = '/home/carl/AnghaBench/tengine/modules/ngx_http_upstream_dyups_module/extr_ngx_http_dyups_module.c_ngx_dyups_delete_upstream.c'
source_filename = "/home/carl/AnghaBench/tengine/modules/ngx_http_upstream_dyups_module/extr_ngx_http_dyups_module.c_ngx_dyups_delete_upstream.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }
%struct.TYPE_10__ = type { %struct.TYPE_7__*, i32 }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i32 }

@ngx_cycle = common dso_local global %struct.TYPE_9__* null, align 8
@ngx_http_dyups_module = common dso_local global i32 0, align 4
@ngx_dyups_global_ctx = common dso_local global %struct.TYPE_10__ zeroinitializer, align 8
@ngx_http_dyups_api_enable = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"API disabled\0A\00", align 1
@NGX_HTTP_NOT_ALLOWED = common dso_local global i64 0, align 8
@NGX_HTTP_CONFLICT = common dso_local global i64 0, align 8
@NGX_HTTP_OK = common dso_local global i64 0, align 8
@NGX_DYUPS_DELETE = common dso_local global i32 0, align 4
@NGX_OK = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [51 x i8] c"alert: delte success but not sync to other process\00", align 1
@NGX_LOG_ALERT = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [11 x i8] c"[dyups] %V\00", align 1
@NGX_HTTP_INTERNAL_SERVER_ERROR = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ngx_dyups_delete_upstream(i32* %0, i32* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_7__*, align 8
  %10 = alloca %struct.TYPE_8__*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %11 = load %struct.TYPE_9__*, %struct.TYPE_9__** @ngx_cycle, align 8
  %12 = load i32, i32* @ngx_http_dyups_module, align 4
  %13 = call %struct.TYPE_8__* @ngx_http_cycle_get_module_main_conf(%struct.TYPE_9__* %11, i32 %12)
  store %struct.TYPE_8__* %13, %struct.TYPE_8__** %10, align 8
  store i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @ngx_dyups_global_ctx, i32 0, i32 1), i32** %8, align 8
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @ngx_dyups_global_ctx, i32 0, i32 0), align 8
  store %struct.TYPE_7__* %14, %struct.TYPE_7__** %9, align 8
  %15 = load i32, i32* @ngx_http_dyups_api_enable, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %2
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @ngx_str_set(i32* %18, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %20 = load i64, i64* @NGX_HTTP_NOT_ALLOWED, align 8
  store i64 %20, i64* %3, align 8
  br label %70

21:                                               ; preds = %2
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %10, align 8
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %30, label %26

26:                                               ; preds = %21
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %28 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i32 0, i32 0
  %29 = call i32 @ngx_shmtx_lock(i32* %28)
  br label %38

30:                                               ; preds = %21
  %31 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %31, i32 0, i32 0
  %33 = call i32 @ngx_shmtx_trylock(i32* %32)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %37, label %35

35:                                               ; preds = %30
  %36 = load i64, i64* @NGX_HTTP_CONFLICT, align 8
  store i64 %36, i64* %3, align 8
  br label %70

37:                                               ; preds = %30
  br label %38

38:                                               ; preds = %37, %26
  %39 = load i32*, i32** %8, align 8
  %40 = call i32 @ngx_http_dyups_read_msg_locked(i32* %39)
  %41 = load i32*, i32** %4, align 8
  %42 = load i32*, i32** %5, align 8
  %43 = call i64 @ngx_dyups_do_delete(i32* %41, i32* %42)
  store i64 %43, i64* %6, align 8
  %44 = load i64, i64* %6, align 8
  %45 = load i64, i64* @NGX_HTTP_OK, align 8
  %46 = icmp ne i64 %44, %45
  br i1 %46, label %47, label %48

47:                                               ; preds = %38
  br label %65

48:                                               ; preds = %38
  %49 = load i32*, i32** %4, align 8
  %50 = load i32, i32* @NGX_DYUPS_DELETE, align 4
  %51 = call i64 @ngx_http_dyups_send_msg(i32* %49, i32* null, i32 %50)
  store i64 %51, i64* %7, align 8
  %52 = load i64, i64* %7, align 8
  %53 = load i64, i64* @NGX_OK, align 8
  %54 = icmp ne i64 %52, %53
  br i1 %54, label %55, label %64

55:                                               ; preds = %48
  %56 = load i32*, i32** %5, align 8
  %57 = call i32 @ngx_str_set(i32* %56, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0))
  %58 = load i32, i32* @NGX_LOG_ALERT, align 4
  %59 = load %struct.TYPE_9__*, %struct.TYPE_9__** @ngx_cycle, align 8
  %60 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %59, i32 0, i32 0
  %61 = load i32, i32* %60, align 4
  %62 = call i32 @ngx_log_error(i32 %58, i32 %61, i32 0, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i32** %5)
  %63 = load i64, i64* @NGX_HTTP_INTERNAL_SERVER_ERROR, align 8
  store i64 %63, i64* %6, align 8
  br label %64

64:                                               ; preds = %55, %48
  br label %65

65:                                               ; preds = %64, %47
  %66 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %67 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %66, i32 0, i32 0
  %68 = call i32 @ngx_shmtx_unlock(i32* %67)
  %69 = load i64, i64* %6, align 8
  store i64 %69, i64* %3, align 8
  br label %70

70:                                               ; preds = %65, %35, %17
  %71 = load i64, i64* %3, align 8
  ret i64 %71
}

declare dso_local %struct.TYPE_8__* @ngx_http_cycle_get_module_main_conf(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @ngx_str_set(i32*, i8*) #1

declare dso_local i32 @ngx_shmtx_lock(i32*) #1

declare dso_local i32 @ngx_shmtx_trylock(i32*) #1

declare dso_local i32 @ngx_http_dyups_read_msg_locked(i32*) #1

declare dso_local i64 @ngx_dyups_do_delete(i32*, i32*) #1

declare dso_local i64 @ngx_http_dyups_send_msg(i32*, i32*, i32) #1

declare dso_local i32 @ngx_log_error(i32, i32, i32, i8*, i32**) #1

declare dso_local i32 @ngx_shmtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
